test/e2e/setup/demo-only/podinfos-preview/1-ingress-generic.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ratelimit
  namespace: podinfos
spec:
  rateLimit:
    average: 10
    burst: 5
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: podinfos-add-trailing-slash
  namespace: podinfos
spec:
  redirectRegex:
    regex: ^https?://([^/]+)/([^/]+)/([^/]+)$
    replacement: https://${1}/${2}/${3}/
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-namespace-prefix
  namespace: podinfos
spec:
  stripPrefix:
    prefixes:
      - /podinfos-preview
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-appname
  namespace: podinfos
spec:
  stripPrefixRegex:
    regex:
      - /[^/]+
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: podinfos-gateway
  namespace: podinfos
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`demo.configbutler.ai`) && PathPrefix(`/podinfos-preview/`)
    kind: Rule
    middlewares:
    - name: ratelimit
    - name: podinfos-add-trailing-slash
    - name: strip-namespace-prefix
