test/e2e/setup/demo-only/podinfos-preview/1-patch-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-namespace-prefix
  labels:
    configbutler.ai/path-prefix: "podinfos"
spec:
  stripPrefix:
    prefixes:
      - /podinfos-preview
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: podinfos-gateway
  labels:
    configbutler.ai/path-prefix: "podinfos"
spec:
  routes:
  - match: Host(`demo.configbutler.ai`) && PathPrefix(`/podinfos-preview/`)
    kind: Rule
    middlewares:
    - name: ratelimit
    - name: podinfos-add-trailing-slash
    - name: strip-namespace-prefix
